--- a/gb/24/12/20/n14394658.md
+++ b/gb/24/12/20/n14394658.md
@@ -3,7 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共央企跨界种地 专家：最终恐是一地鸡毛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/12/id14394726-0fe931ddf1bda47c15fc4a0b13f883a4-600x400.jpg" />
-<h6>央企中铁十四局不建房子改行重地引爆网络热议，民间担忧央企与农民争地，未来农民出路在哪里。（视频截图／大纪元合成）
+<h6>央企中铁十四局不建房子改行种地引爆网络热议，民间担忧央企与农民争地，未来农民出路在哪里。（视频截图／大纪元合成）
 </h6>
 <hr>
 	<p>【大纪元2024年12月20日讯】（大纪元记者骆亚采访报导）近日央企中铁十四局在中共高标准的农田政策扶持下，在山东承包了1.5万亩地，引爆网络舆论热议，同时引发民间为农民未来的出路担忧。专家分析表示，中共的这种强制性的农业实体经济模式，难突破以往失败的经验教训，最终可能是一地鸡毛。</p>
@@ -11,7 +11,7 @@
 <p>此外，央企中铁21局也在兰州举办现代化农业推进会。</p>
 <p>根据中共公开政策显示，根据规划，2030年将建成12亿亩高标准农田的目标，并为此投入了大量财政资金，鼓励社会资本参与。此前中共还计划建一万个新农场。</p>
 <h2>专家：央企国企进军农业 进一步加大国进民退</h2>
-<p>外界认为，中铁十四局跨界种田仅仅只是开端，在中共的国家政策持扶持下，未来更多的央企涉足农业将成为一种趋势。</p>
+<p>外界认为，中铁十四局跨界种田仅仅只是开端，在中共的国家政策扶持下，未来更多的央企涉足农业将成为一种趋势。</p>
 <p>美国华裔经济学家黄大卫向大纪元分析，有政策支持意味着会有资金到位及其它优惠政策，说白了就是有利润、有利益，所以央企、国企会积极参与。“同时来说央企国企进军农业市场，进一步加大国进民退，国有经济的占比会越来越大。”</p>
 <p>他强调，中共当局想摆脱需要大量进口农副产品的困境，增加中国粮食自给自足的可能性，但具体实施起来难度很大。</p>
 <p>美国华裔经济学者李恒青认为，央企进入农业，除了因为政府政策有补贴、优惠外，还有一个就是效忠，“效忠习近平要求搞这个所谓高品质、高质量的未来农业发展，未来也有可能升官发财。”</p>
@@ -21,7 +21,7 @@
 <p>一些农民表示，看到中铁十四局这个新闻后开始迷茫了，尤其是一辈子种地的农民表示未来怎么办？不少博主也有同样的担忧。</p>
 <figure id="attachment_14394734" aria-describedby="caption-attachment-14394734" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14394734-8ff98d2800ea761292b234dd1a734162.jpg"><img decoding="async" class="size-medium wp-image-14394734" src="https://i.epochtimes.com/assets/uploads/2024/12/id14394734-8ff98d2800ea761292b234dd1a734162-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14394734" class="wp-caption-text">央企中铁十四局改行种地引爆网络。不少博主担忧央企与民争地，未来农民出路在哪里。（视频截图／大纪元合成）</figcaption></figure>
 <p>山东博主“志境说商业”12月19日在节目中表示，“（建筑）专业团队种粮食，这是跟老百姓抢饭碗，能不能理解为农民马上要消失了？”</p>
-<p>他举例，“前两年合村并镇给几万的补贴，鼓励农村人去县城买房，后来有土地流转，说的好听是自愿买地，你要是不愿意买地可以流转出来，一流转就是几十年，一亩地给你个几万块钱，这个跟买了有啥区别，拿着这个钱能干啥？”</p>
+<p>他举例，“前两年合村并镇给几万的补贴，鼓励农村人去县城买房，后来有土地流转，说的好听是自愿卖地，你要是不愿意卖地可以流转出来，一流转就是几十年，一亩地给你个几万块钱，这个跟买了有啥区别，拿着这个钱能干啥？”</p>
 <p>他还说土地回收更狠，直接一次性买断农民的所有土地，“农民土地是交出去了，也不知道到底是交给国家了，还是交给资本家了，会不会等到以后一个包子都卖十块二十块了，老百姓们种了一辈子地，到最后连饭也吃不起了？”</p>
 <p>广东的博主“农人军师”12月11日也在节目中表示，“大型央企拿着优厚的资金和资源把普通老百姓的活路都搞没了。要农民去城市打工吗？连最基本的保障都没有了，这是央企跟农民抢饭碗，不给普通老百姓活路了吗？”</p>
 <p>大陆一位从事十多年行业招商落地的老潘近日也在节目中说，这种情况说明竞争越来越激烈，“说明我们普通人创业或有口饭吃很难，所以以后普通人要找这种大的平台借势才能找口饭吃。以后自己创业都很难了，这种机会越来越少了。”</p>
@@ -39,36 +39,47 @@
 <p>李恒青认为，不按照市场规律做，也不按照基本人性的方式来做，全是习当局想一出是一出。“真正的事实跟现实情况跟他异想天开的想法是脱离的，最后就烂尾了。”</p>
 <p>他还表示，在地方政府收购农民土地过程中，“如果无法保证农民的利益，很有可能最后会激起民怨引起农村暴动的。”</p>
 <p>责任编辑：林琮文#</p>
-<p>&nbsp;</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305033.md#1" target="_blank" rel="noopener">中共推农民大规模进城落户 专家析背后算计</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/22/n14208629.md#1" target="_blank" rel="noopener">靠养老金难过活 中国退休人士被迫再就业</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/5/22/n14255647.md#1" target="_blank" rel="noopener">中国人口危机加剧 各地上演“抢人大战”</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/7/8/n14030883.md#1" target="_blank" rel="noopener">中共专家为刺激消费盯上1.8亿农民工 引争议</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372954.md#1" target="_blank" rel="noopener">中国经济下滑 新农合“断缴潮”不断扩大</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327123.md#1">【新闻大家谈】吴国光：文革记忆 影响一生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/11/n14328119.md#1">掸封尘：中共政权进入“摆烂时代”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329640.md#1">中共向越南泄洪 对越南的影响引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330616.md#1">为建水力发电厂 中共强拆并淹没藏族寺庙</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385713.md#1">【古道人生】弟子216人 为何只有2人修成升天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390711.md#1">【未解之谜】蕴含地外元素可自主移动？贝茨球之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392283.md#1">【未解之谜】最匪夷所思的实验 发现时间的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362262.md#1">【中国禁闻】华为新款手机被爆用旧芯片</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393669.md#1">【新闻大破解】泄攻台计划 共军怎么都打不赢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394449.md#1">【百年真相】饿殍遍野 毛泽东悄悄建滴水洞别墅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393254.md#1">习访澳门“全城缴械”维稳升级惹民怨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393103.md#1">北京学者询问如何让女生老实生孩子 全场傻眼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392820.md#1">一中共空间科学专家在北京遭遇车祸死亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14393017.md#1">梅艳芳百岁母覃美金获撤销破产呈请 原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392231.md#1">被巨额报价邀演新片 彼特拒绝与裘莉银幕重聚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392934.md#1">《风流一代》票房惨淡 贾樟柯或首次面临巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392190.md#1">朱丹自曝频繁心悸 竟吃了40多年鸡蛋才知过敏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393100.md#1">辛芷蕾自曝拍《繁花》回头戏拍到背抽箸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389466.md#1">胰腺癌早预防早发现 这种腹痛是警号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391784.md#1">7种高钠地雷食物 不只伤肾还易得糖尿病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392444.md#1">避免“断崖式衰老” 延缓抗老三关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392466.md#1">【旅行趣】台湾马鞍坝生态园区 陪鱼儿爬梯</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392563.md#1">民航机遭雷击会发生啥事？会从天上坠落吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/20/n14394658.htm">中共央企跨界种地 专家：最终恐是一地鸡毛</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394658.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
