--- a/gb/24/12/19/n14394168.md
+++ b/gb/24/12/19/n14394168.md
@@ -4,7 +4,7 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>访民宋嘉鸿揭露黑监牢名录 遭警察上门骚扰</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元2024年12月19日讯】（大纪元记者李熙采访报导）因揭露上海《黑监牢名录》，宋嘉鸿遭警察两度上门警告，微信群聊和朋友圈一度受限制。宋嘉鸿表示，警察行为属违法，必要时将采取法律行动。</p>
+	<p>【大纪元2024年12月19日讯】（大纪元记者李熙采访报导）因揭露上海《黑监牢名录》，宋嘉鸿遭警察两度上门骚扰，微信群聊和朋友圈一度受限制。宋嘉鸿表示，警察行为属违法，必要时将采取法律行动。</p>
 <p>宋嘉鸿已经揭露上海《黑监牢名录》（一～八），涉及了上海每个行政区政府对访民的打压迫害。11月28日与12月16日，南京东路派出所两名警察来到松江区宋嘉鸿的住所警告他不要发未经核实的信息。</p>
 <p>宋嘉鸿对大纪元记者表示，“第一次来时，我问他们警号支支吾吾的，不答复就离开了。第二次来是到小区秋乐苑居委会，叫我到居委会问话。我对居委会干部说，他们《介绍信》有吗？她回答不知道。我说，手续不对，程序错误，这怎么来的呢？”</p>
 <p>“现在的政府人员连一些起码的常识都不懂，还整天在高喊依法治国，荒唐不荒唐？估计又是为《黑监牢名录》来。”</p>
@@ -16,35 +16,33 @@
 <p>他举了两个例子：金山访民徐建明出黑监牢不久，检查身体发觉“肠子烂了”，住了将近半年的医院含恨离世；普陀区的访民周静智出黑监牢回家第一句话，被“打毒针”了，在不明不白中也离世了。</p>
 <p>宋嘉鸿表示，“其原因就是维权上访安全无保障。人活着安全第一是起码的道理，最低的要求，全世界范围内都说得通。所以为了中国人能像像样样地活着，我们必须理直气壮地揭露黑监牢，就算会杀头坐牢我也不会放弃。”</p>
 <p>责任编辑：高静#</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360870.md#1">维权人士宋嘉鸿揭露上海黑监牢名录（四）</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365734.md#1">维权人士宋嘉鸿揭露上海黑监牢名录（五）</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371978.md#1">维权人士宋嘉鸿揭露上海黑监牢名录（六）</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/29/n14381123.md#1">维权人士宋嘉鸿发布上海黑监牢名录（七）</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/17/n10403852.md#1" target="_blank">老绥远韩氏：文革阅读经历</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11009341.md#1" target="_blank">阎长贵：陶铸是被谁打倒的？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385713.md#1">【古道人生】弟子216人 为何只有2人修成升天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386426.md#1">没有手机的古代小孩都玩些什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390711.md#1">【未解之谜】蕴含地外元素可自主移动？贝茨球之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393669.md#1">【新闻大破解】泄攻台计划 共军怎么都打不赢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393072.md#1">【新闻大家谈】川普当选后首次记者会七大重点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14393772.md#1">【菁英论坛】川普邀习参加就职典礼 习陷窘境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392126.md#1">俄乌战 欧盟首次全面制裁中国实体及个人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392456.md#1">网传联署信要求中共党魁下台 列28条问题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392140.md#1">云南玉溪穆斯林抗议升级 马玉巍被捕引发对峙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392231.md#1">被巨额报价邀演新片 彼特拒绝与裘莉银幕重聚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391786.md#1">《破·地狱》港票房5.5亿台币 观影逾200万人次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391644.md#1">中山美穗猝逝 获日本唱片大奖颁发特别功劳奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392190.md#1">朱丹自曝频繁心悸 竟吃了40多年鸡蛋才知过敏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392934.md#1">《风流一代》票房惨淡 贾樟柯或首次面临巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386475.md#1">赚百万美元不是梦 投资ETF有哪些好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391784.md#1">7种高钠地雷食物 不只伤肾还易得糖尿病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388423.md#1">吃三食材让大脑年轻11岁 分享超级食谱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391759.md#1">为什么天气寒冷时 排尿频率会增加？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392466.md#1">【旅行趣】台湾马鞍坝生态园区 陪鱼儿爬梯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/19/n14394168.htm">访民宋嘉鸿揭露黑监牢名录 遭警察上门骚扰</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394168.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
